--- a/Infrastructure.Services/Infrastructure.Services.csproj
+++ b/Infrastructure.Services/Infrastructure.Services.csproj
@@ -5,9 +5,11 @@
     </PropertyGroup>
 
     <ItemGroup>
+        <PackageReference Include="MediatR" Version="10.0.1" />
         <PackageReference Include="Microsoft.Extensions.Configuration.Abstractions" Version="5.0.0" />
         <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="5.0.0" />
         <PackageReference Include="NETCore.MailKit" Version="2.0.0" />
+
     </ItemGroup>
 
     <ItemGroup>
