--- a/Infrastructure.MessageBus/Infrastructure.MessageBus.csproj
+++ b/Infrastructure.MessageBus/Infrastructure.MessageBus.csproj
@@ -4,5 +4,16 @@
         <TargetFramework>net5.0</TargetFramework>
     </PropertyGroup>
 
- 
+    <ItemGroup>
+        <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="5.0.2" />
+        <PackageReference Include="Microsoft.Extensions.Hosting" Version="5.0.0" />
+        <PackageReference Include="RabbitMQ.Client" Version="6.4.0" />
+        <PackageReference Include="Microsoft.Extensions.Configuration.Abstractions" Version="5.0.0" />
+        <PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Version="5.0.0" />
+        <PackageReference Include="Newtonsoft.Json" Version="10.0.1" />
+    </ItemGroup>
+
+
+
+
 </Project>
