--- a/Infrastructure.MessageBus/Infrastructure.MessageBus.csproj
+++ b/Infrastructure.MessageBus/Infrastructure.MessageBus.csproj
@@ -13,6 +13,11 @@
         <PackageReference Include="Newtonsoft.Json" Version="10.0.1" />
     </ItemGroup>
 
+    <ItemGroup>
+      <ProjectReference Include="..\Core.Application\Core.Application.csproj" />
+      <ProjectReference Include="..\Core.Domain\Core.Domain.csproj" />
+    </ItemGroup>
+
 
 
 
