--- a/Infrastructure.Services/Infrastructure.Services.csproj
+++ b/Infrastructure.Services/Infrastructure.Services.csproj
@@ -6,6 +6,7 @@
 
     <ItemGroup>
         <PackageReference Include="MediatR" Version="10.0.1" />
+        <PackageReference Include="MediatR.Extensions.Microsoft.DependencyInjection" Version="9.0.0" />
         <PackageReference Include="Microsoft.Extensions.Configuration.Abstractions" Version="5.0.0" />
         <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="5.0.0" />
         <PackageReference Include="NETCore.MailKit" Version="2.0.0" />
@@ -13,6 +14,7 @@
     </ItemGroup>
 
     <ItemGroup>
+      <ProjectReference Include="..\Core.Application\Core.Application.csproj" />
       <ProjectReference Include="..\Core.Domain\Core.Domain.csproj" />
     </ItemGroup>
 
